# entity-collision-protocol

./: .gitignore  ANONYMIZATION.md  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
bench/: bench_lifecycle_gate_cost.py  plot_ingest_curves.py
evals/: __init__.py  _embed_cache.py  _signals.py  ablation.py  adaptive_vw_offline.py  beir_adapter.py  bootstrap_ci.py  cross_session_recall_lift.py  d1redux_multiseed_ci.py  entity_channel_sweep.py  entity_collision.py  entity_collision_ci.py  entity_collision_plot.py  entity_collision_sweep.py  fmax_max_margin.py  ingest_latency_figure.py  io_utils.py  lme_compare_arms.py  lme_d_ablation_summarize.py  lme_per_type_figure.py  locomo_adapter.py  locomo_adaptive_vw.py  locomo_appraisal_bound_ci.py  locomo_appraisal_bound_multihop_ci.py  locomo_appraisal_bound_sweep.py  locomo_appraisal_rerank_inspect.py  locomo_appraisal_rerank_inspect_ci.py  locomo_c5_adversarial.py  locomo_fragmentation_per_tau_bootstrap.py  locomo_fragmentation_per_tau_calibration.py  locomo_fragmentation_replication.py  locomo_fragmentation_tau_sweep.py  locomo_gate_replication.py  locomo_learned_router.py  locomo_merge_for_ci.py  locomo_percat_plot.py  locomo_promote_threshold_sweep.py  locomo_recall_lift.py  locomo_recall_lift_add_only_ci.py  locomo_recall_lift_ci.py  (+64 more)
paper/: 00_abstract.md  10_intro.md  20_related.md  30_methods.md  40_results.md  50_discussion.md  75_limitations.md  77_ethics.md  80_acknowledgements_cameraready.md  A1_appendix_ablations.md  A2_appendix_security_audits.md  A3_extended_related.md  A4_extended_discussion.md  A5_extended_threats.md  A6_appendix_traceability.md  A7_extended_methods.md  CITATIONS_VERIFIED.md  README.md  REPRODUCIBILITY.md  build.sh
scripts/: Dockerfile.pandoc-acl  acl_tables.lua  build_paper_acl.py  build_paper_pdf.py  check_acl_layout.py  check_doc_refs.py  diff_results.py  ec_bge_vs_minilm_ci.py  finalize_d15_live.sh  lme_bge_arms_paired_ci.py  lme_bge_vs_minilm_n100_paired_ci.py  lme_bge_vs_minilm_n500_paired_ci.py  lme_overlap_threshold_T.py  lme_rm3_vs_bm25_n500_paired_ci.py  locomo_discriminator_gate_analysis.py  locomo_purity_gate_analysis.py  locomo_st_analysis.py  profile_recall_prf_sp.py  profile_skip_first_rerank.py  regen_figures.sh  reproduce.sh  run_bge_sweeps.sh  run_d15_live_n240.sh  run_d15d_lme_sweep.sh  run_lme_arm.sh  run_locomo_st_arms.sh  verify_citations.py  verify_repro_artifacts.sh
specs/: LETTA_XSYS_SPEC.md  PAGE_COUNT_DRY_RUN.md  RM3_BASELINE_SPEC.md
tests/: conftest.py  test_beir_adapter.py  test_bench_lifecycle_gate_cost.py  test_evals_embed_cache.py  test_evals_share_prior_sweep.py  (+1 more)
(+691 files in other folders)
